--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
+  "scripts": {
+    "sass": "node-sass -w scss/ -o css/"
+  },
+
   "dependencies": {
     "bootstrap": "^5.1.3"
   },
   "devDependencies": {
-    "sass": "^1.50.1"
+    "node-sass": "^7.0.1"
   }
 }
