--- a/package.json
+++ b/package.json
@@ -1,12 +1,8 @@
 {
   "scripts": {
-    "sass": "node-sass -w scss/ -o css/"
+    "sass": "node-sass -w scss/  -o css/ --output-style compressed"
   },
-
   "dependencies": {
     "bootstrap": "^5.1.3"
-  },
-  "devDependencies": {
-    "node-sass": "^7.0.1"
   }
 }
