--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "scripts": {
-    "sass": "node-sass -w scss/  -o css/",
-    "sass:compressed": "node-sass -w scss/  -o css/  --output-style compressed"
+    "sass": "node-sass -w scss/  -o assets/css/",
+    "sass:compressed": "node-sass -w scss/  -o assets/css/  --output-style compressed"
   },
   "dependencies": {
     "bootstrap": "^5.1.3"
